[package]
name = "led-strip"
version = "0.1.0"
authors = ["ultram4rine <ultramarine730@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pwm-pca9685 = "0.3.0"
linux-embedded-hal = "0.3.0"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
